Updates from Overleaf

--- a/inputs/timeline.tex
+++ b/inputs/timeline.tex
@@ -18,7 +18,7 @@ A Programmable Approach for Neural Network  Compression                  & IEEE 
 Bayesian Optimization for Model Compression                              & NVIDIA 2019              \\ \midrule
 Correctness-preserving Compression of Datasets and Neural Networks & Correctness SC 2020      \\
 Reliable Model Compression via Label-Preservation-Aware Loss Functions   & CVPR 2020 (Under Review) \\
-Mitigating the Bias \& Attribution Problems for Safety \& Fairness & KDD 2021 (Proposed Venue)                             \\ \midrule
+Mitigating the Bias \& Attribution Problems for Fairness \& Safety & KDD 2021 (Proposed Venue)                             \\ \midrule
 \textbf{Dissertation Defense}                                            & \textbf{Spring 2021} \\   
 \bottomrule
 \end{tabular}
