--- a/main.bib
+++ b/main.bib
@@ -37133,3 +37133,968 @@ month={Dec},}
   journal={arXiv preprint arXiv:1312.5602},
   year={2013}
 }
+
+@inproceedings{liu2017sphereface,
+  title={Sphereface: Deep hypersphere embedding for face recognition},
+  author={Liu, Weiyang and Wen, Yandong and Yu, Zhiding and Li, Ming and Raj, Bhiksha and Song, Le},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={212--220},
+  year={2017}
+}
+
+@article{renda2020comparing,
+  title={Comparing rewinding and fine-tuning in neural network pruning},
+  author={Renda, Alex and Frankle, Jonathan and Carbin, Michael},
+  journal={arXiv preprint arXiv:2003.02389},
+  year={2020}
+}
+
+@article{blalock2020state,
+  title={What is the State of Neural Network Pruning?},
+  author={Blalock, Davis and Ortiz, Jose Javier Gonzalez and Frankle, Jonathan and Guttag, John},
+  journal={arXiv preprint arXiv:2003.03033},
+  year={2020}
+}
+
+@inproceedings{pldi19-gopinath-fixedpt-number-synth,
+author = {Gopinath, Sridhar and Ghanathe, Nikhil and Seshadri, Vivek and Sharma, Rahul},
+title = {Compiling KB-Sized Machine Learning Models to Tiny IoT Devices},
+year = {2019},
+isbn = {9781450367127},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3314221.3314597},
+doi = {10.1145/3314221.3314597},
+booktitle = {Proceedings of the 40th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+pages = {79–95},
+numpages = {17},
+keywords = {Compiler, Programming Language, Machine Learning, Microcontroller, Fixed-point, FPGA, IoT device},
+location = {Phoenix, AZ, USA},
+series = {PLDI 2019}
+}
+
+@incollection{comparing-nns,
+title = {Insights on representational similarity in neural networks with canonical correlation},
+author = {Morcos, Ari and Raghu, Maithra and Bengio, Samy},
+booktitle = {Advances in Neural Information Processing Systems 31},
+editor = {S. Bengio and H. Wallach and H. Larochelle and K. Grauman and N. Cesa-Bianchi and R. Garnett},
+pages = {5727--5736},
+year = {2018},
+publisher = {Curran Associates, Inc.}
+}
+
+
+
+@inproceedings{fong2019understanding,
+  title={Understanding deep networks via extremal perturbations and smooth masks},
+  author={Fong, Ruth and Patrick, Mandela and Vedaldi, Andrea},
+  booktitle={Proceedings of the IEEE International Conference on Computer Vision},
+  pages={2950--2958},
+  year={2019}
+}
+
+@inproceedings{hooker2019benchmark,
+  title={A benchmark for interpretability methods in deep neural networks},
+  author={Hooker, Sara and Erhan, Dumitru and Kindermans, Pieter-Jan and Kim, Been},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={9734--9745},
+  year={2019}
+}
+
+
+@article{buhrmester2019analysis,
+  title={Analysis of Explainers of Black Box Deep Neural Networks for Computer Vision: A Survey},
+  author={Buhrmester, Vanessa and M{\"u}nch, David and Arens, Michael},
+  journal={arXiv preprint arXiv:1911.12116},
+  year={2019}
+}
+
+
+@article{tramer2017space,
+  title={The space of transferable adversarial examples},
+  author={Tram{\`e}r, Florian and Papernot, Nicolas and Goodfellow, Ian and Boneh, Dan and McDaniel, Patrick},
+  journal={arXiv preprint arXiv:1704.03453},
+  year={2017}
+}
+
+@inproceedings{DBLP:conf/iclr/FrankleC19,
+  author    = {Jonathan Frankle and
+               Michael Carbin},
+  title     = {The Lottery Ticket Hypothesis: Finding Sparse, Trainable Neural Networks},
+  booktitle = {7th International Conference on Learning Representations, {ICLR} 2019,
+               New Orleans, LA, USA, May 6-9, 2019},
+  publisher = {OpenReview.net},
+  year      = {2019},
+  url       = {https://openreview.net/forum?id=rJl-b3RcF7},
+  timestamp = {Thu, 25 Jul 2019 13:03:15 +0200},
+  biburl    = {https://dblp.org/rec/conf/iclr/FrankleC19.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{tramer2020adaptive,
+  title={On Adaptive Attacks to Adversarial Example Defenses},
+  author={Tramer, Florian and Carlini, Nicholas and Brendel, Wieland and Madry, Aleksander},
+  journal={arXiv preprint arXiv:2002.08347},
+  year={2020}
+}
+
+@article{baluta2020scalable,
+  title={Scalable Quantitative Verification For Deep Neural Networks},
+  author={Baluta, Teodora and Chua, Zheng Leong and Meel, Kuldeep S and Saxena, Prateek},
+  journal={arXiv preprint arXiv:2002.06864},
+  year={2020}
+}
+
+@article{cummingsrethinking,
+  title={Rethinking the maturity of artificial intelligence in safety-critical settings},
+  author={Cummings, ML}
+}
+
+@inproceedings{koh2017understanding,
+  title={Understanding black-box predictions via influence functions},
+  author={Koh, Pang Wei and Liang, Percy},
+  booktitle={Proceedings of the 34th International Conference on Machine Learning-Volume 70},
+  pages={1885--1894},
+  year={2017},
+  organization={JMLR. org}
+}
+
+@inproceedings{yeh2018representer,
+  title={Representer point selection for explaining deep neural networks},
+  author={Yeh, Chih-Kuan and Kim, Joon and Yen, Ian En-Hsu and Ravikumar, Pradeep K},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={9291--9301},
+  year={2018}
+}
+
+@article{qin2019verification,
+  title={Verification of non-linear specifications for neural networks},
+  author={Qin, Chongli and O'Donoghue, Brendan and Bunel, Rudy and Stanforth, Robert and Gowal, Sven and Uesato, Jonathan and Swirszcz, Grzegorz and Kohli, Pushmeet and others},
+  journal={arXiv preprint arXiv:1902.09592},
+  year={2019}
+}
+
+@article{radu2019performance,
+  title={Performance Aware Convolutional Neural Network Channel Pruning for Embedded GPUs},
+  author={Radu, Valentin and Kaszyk, Kuba and Wen, Yuan and Turner, Jack and Cano, Jos{\'e} and Crowley, Elliot J and Franke, Bj{\"o}rn and Storkey, Amos and O’Boyle, Michael},
+  year={2019}
+}
+
+@article{carreira2017model,
+  title={Model compression as constrained optimization, with application to neural nets. Part I: General framework},
+  author={Carreira-Perpin{\'a}n, Miguel A},
+  journal={arXiv preprint arXiv:1707.01209},
+  year={2017}
+}
+
+@inproceedings{qin2018verification,
+title={Verification of Non-Linear Specifications for Neural Networks},
+author={Chongli Qin and Krishnamurthy (Dj) Dvijotham and Brendan O'Donoghue and Rudy Bunel and Robert Stanforth and Sven Gowal and Jonathan Uesato and Grzegorz Swirszcz and Pushmeet Kohli},
+booktitle={International Conference on Learning Representations},
+year={2019},
+url={https://openreview.net/forum?id=HyeFAsRctQ},
+}
+
+@article{hooker2019selective,
+  title={Selective Brain Damage: Measuring the Disparate Impact of Model Pruning},
+  author={Hooker, Sara and Courville, Aaron and Dauphin, Yann and Frome, Andrea},
+  journal={arXiv preprint arXiv:1911.05248},
+  year={2019}
+}
+
+@inproceedings{yin2019fourier,
+  title={A fourier perspective on model robustness in computer vision},
+  author={Yin, Dong and Lopes, Raphael Gontijo and Shlens, Jon and Cubuk, Ekin Dogus and Gilmer, Justin},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={13255--13265},
+  year={2019}
+}
+
+@article{adler2018auditing,
+  title={Auditing black-box models for indirect influence},
+  author={Adler, Philip and Falk, Casey and Friedler, Sorelle A and Nix, Tionney and Rybeck, Gabriel and Scheidegger, Carlos and Smith, Brandon and Venkatasubramanian, Suresh},
+  journal={Knowledge and Information Systems},
+  volume={54},
+  number={1},
+  pages={95--122},
+  year={2018},
+  publisher={Springer}
+}
+
+@article{marcus2020next,
+  title={The Next Decade in AI: Four Steps Towards Robust Artificial Intelligence},
+  author={Marcus, Gary},
+  journal={arXiv preprint arXiv:2002.06177},
+  year={2020}
+}
+
+@article{goodman2017european,
+  title={European Union regulations on algorithmic decision-making and a “right to explanation”},
+  author={Goodman, Bryce and Flaxman, Seth},
+  journal={AI magazine},
+  volume={38},
+  number={3},
+  pages={50--57},
+  year={2017}
+}
+
+@inproceedings{zheng2019challenges,
+  title={Challenges of Privacy-Preserving Machine Learning in IoT},
+  author={Zheng, Mengyao and Xu, Dixing and Jiang, Linshan and Gu, Chaojie and Tan, Rui and Cheng, Peng},
+  booktitle={Proceedings of the First International Workshop on Challenges in Artificial Intelligence and Machine Learning for Internet of Things},
+  pages={1--7},
+  year={2019}
+}
+
+@inproceedings{abadi2016deep,
+  title={Deep learning with differential privacy},
+  author={Abadi, Martin and Chu, Andy and Goodfellow, Ian and McMahan, H Brendan and Mironov, Ilya and Talwar, Kunal and Zhang, Li},
+  booktitle={Proceedings of the 2016 ACM SIGSAC Conference on Computer and Communications Security},
+  pages={308--318},
+  year={2016}
+}
+
+@article{yan2019privacy,
+  title={Privacy-Preserving Compressive Model for Enhanced Deep-Learning-Based Service Provision System in Edge Computing},
+  author={Yan, Yushuang and Pei, Qingqi and Li, Hongning},
+  journal={IEEE Access},
+  volume={7},
+  pages={92921--92937},
+  year={2019},
+  publisher={IEEE}
+}
+
+@inproceedings{zheng2019challenges,
+  title={Challenges of Privacy-Preserving Machine Learning in IoT},
+  author={Zheng, Mengyao and Xu, Dixing and Jiang, Linshan and Gu, Chaojie and Tan, Rui and Cheng, Peng},
+  booktitle={Proceedings of the First International Workshop on Challenges in Artificial Intelligence and Machine Learning for Internet of Things},
+  pages={1--7},
+  year={2019}
+}
+
+@inproceedings{abadi2016deep,
+  title={Deep learning with differential privacy},
+  author={Abadi, Martin and Chu, Andy and Goodfellow, Ian and McMahan, H Brendan and Mironov, Ilya and Talwar, Kunal and Zhang, Li},
+  booktitle={Proceedings of the 2016 ACM SIGSAC Conference on Computer and Communications Security},
+  pages={308--318},
+  year={2016}
+}
+
+@article{yan2019privacy,
+  title={Privacy-Preserving Compressive Model for Enhanced Deep-Learning-Based Service Provision System in Edge Computing},
+  author={Yan, Yushuang and Pei, Qingqi and Li, Hongning},
+  journal={IEEE Access},
+  volume={7},
+  pages={92921--92937},
+  year={2019},
+  publisher={IEEE}
+}
+
+@misc{google-street-view,
+    key = {google-street-view},
+    howpublished = {\url{https://www.google.com/streetview/}},
+    year = 2020
+}
+
+@misc{street-view-privacy,
+    key = {street-view-privacy},
+    howpublished = {\url{https://en.wikipedia.org/wiki/Google_Street_View_privacy_concerns}},
+    year = 2020
+}
+
+@misc{street-learn-dataset,
+    key = {street-learn-dataset},
+    howpublished = {\url{https://sites.google.com/view/streetlearn/dataset}},
+    year = 2020
+}
+
+@misc{precision-agriculture,
+key = {precision-agriculture},
+howpublished = {\url{https://www.nytimes.com/2019/09/18/business/farms-aerial-imagery-agriculture.html}},
+year = 2019}
+
+@misc{axon-privacy-license-data,
+key = {axon-privacy-license-data},
+howpublished = {\url{https://techcrunch.com/2019/10/23/axon-adds-license-plate-recognition-to-police-dash-cams-but-heeds-ethics-boards-concerns/}}}
+
+@article{cacm-ai-license-plate,
+author = {Joh, Elizabeth E.},
+title = {Increasing Automation in Policing},
+year = {2019},
+issue_date = {December 2019},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {63},
+number = {1},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/3372912},
+doi = {10.1145/3372912},
+journal = {Commun. ACM},
+month = dec,
+pages = {20–22},
+numpages = {3}
+}
+
+
+@misc{syntiant,
+key = {syntiant},
+howpublished = {\url={https://www.syntiant.com/post/keyword-spotting-power-comparison}}}
+
+@misc{lu2019training,
+    title={Training Deep Neural Networks Using Posit Number System},
+    author={Jinming Lu and Siyuan Lu and Zhisheng Wang and Chao Fang and Jun Lin and Zhongfeng Wang and Li Du},
+    year={2019},
+    eprint={1909.03831},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
+}
+@article{deep-positron,
+  author    = {Zachariah Carmichael and
+               Seyed Hamed Fatemi Langroudi and
+               Char Khazanov and
+               Jeffrey Lillie and
+               John L. Gustafson and
+               Dhireesha Kudithipudi},
+  title     = {Deep Positron: {A} Deep Neural Network Using the Posit Number System},
+  journal   = {CoRR},
+  volume    = {abs/1812.01762},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1812.01762},
+  archivePrefix = {arXiv},
+  eprint    = {1812.01762},
+  timestamp = {Tue, 01 Jan 2019 15:01:25 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1812-01762.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{posit,
+author = {Gustafson and Yonemoto},
+title = {Beating Floating Point at Its Own Game: Posit Arithmetic},
+year = {2017},
+issue_date = {June 2017},
+publisher = {South Ural State University},
+address = {Chelyabinsk, RUS},
+volume = {4},
+number = {2},
+issn = {2409-6008},
+url = {https://doi.org/10.14529/jsfi170206},
+doi = {10.14529/jsfi170206},
+journal = {Supercomput. Front. Innov.: Int. J.},
+month = jun,
+pages = {71–86},
+numpages = {16},
+keywords = {LINPACK, unum computing, computer arithmetic, energy-efficient computing, valid arithmetic, floating point, linear algebra, neural networks, posits}
+}
+
+@misc{mikolov2013efficient,
+title	= {Efficient Estimation of Word Representations in Vector Space},
+author	= {Tomas Mikolov and Kai Chen and Greg S. Corrado and Jeffrey Dean},
+year	= {2013},
+URL	= {http://arxiv.org/abs/1301.3781}
+}
+
+@InProceedings{fergus2013Visualizing,
+author="Zeiler, Matthew D.
+and Fergus, Rob",
+editor="Fleet, David
+and Pajdla, Tomas
+and Schiele, Bernt
+and Tuytelaars, Tinne",
+title="Visualizing and Understanding Convolutional Networks",
+booktitle="Computer Vision -- ECCV 2014",
+year="2014",
+publisher="Springer International Publishing",
+address="Cham",
+pages="818--833",
+isbn="978-3-319-10590-1"
+}
+
+@inproceedings{
+ancona2018towards,
+title={Towards better understanding of gradient-based attribution methods for Deep Neural Networks},
+author={Marco Ancona and Enea Ceolini and Cengiz Öztireli and Markus Gross},
+booktitle={International Conference on Learning Representations},
+year={2018},
+url={https://openreview.net/forum?id=Sy21R9JAW},
+}
+
+@inproceedings{Mukund2017Axiomatic,
+author = {Sundararajan, Mukund and Taly, Ankur and Yan, Qiqi},
+title = {Axiomatic Attribution for Deep Networks},
+year = {2017},
+publisher = {JMLR.org},
+booktitle = {Proceedings of the 34th International Conference on Machine Learning - Volume 70},
+pages = {3319–3328},
+numpages = {10},
+location = {Sydney, NSW, Australia},
+series = {ICML’17}
+}
+
+
+@ARTICLE{Kim2018Interpretability,
+   author = {{Kim}, B. and Wattenberg M. and {Gilmer}, J. and {Cai} C. and {Wexler} J. and   and {Viegas}, F. and {Sayres}, R. },
+    title = "{Interpretability Beyond Feature Attribution: Quantitative Testing with Concept Activation Vectors (TCAV) }",
+  journal = {ICML},
+archivePrefix = "arXiv",
+   eprint = {1711.11279},
+     year = 2018,
+}
+
+@inproceedings{SimonyanVZ13,
+  author    = {Karen Simonyan and
+               Andrea Vedaldi and
+               Andrew Zisserman},
+  editor    = {Yoshua Bengio and
+               Yann LeCun},
+  title     = {Deep Inside Convolutional Networks: Visualising Image Classification
+               Models and Saliency Maps},
+  booktitle = {2nd International Conference on Learning Representations, {ICLR} 2014,
+               Banff, AB, Canada, April 14-16, 2014, Workshop Track Proceedings},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1312.6034},
+  timestamp = {Thu, 25 Jul 2019 14:36:46 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/SimonyanVZ13.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Vinyals2015ShowAT,
+  title={Show and tell: A neural image caption generator},
+  author={Oriol Vinyals and Alexander Toshev and Samy Bengio and Dumitru Erhan},
+  journal={2015 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year={2015},
+  pages={3156-3164}
+}
+
+@inproceedings{xu2015show,
+author = {Xu, Kelvin and Ba, Jimmy Lei and Kiros, Ryan and Cho, Kyunghyun and Courville, Aaron and Salakhutdinov, Ruslan and Zemel, Richard S. and Bengio, Yoshua},
+title = {Show, Attend and Tell: Neural Image Caption Generation with Visual Attention},
+year = {2015},
+publisher = {JMLR.org},
+booktitle = {Proceedings of the 32nd International Conference on International Conference on Machine Learning - Volume 37},
+pages = {2048–2057},
+numpages = {10},
+location = {Lille, France},
+series = {ICML’15}
+}
+
+@inproceedings{pennington2014glove,
+  author = {Jeffrey Pennington and Richard Socher and Christopher D. Manning},
+  booktitle = {Empirical Methods in Natural Language Processing (EMNLP)},
+  title = {GloVe: Global Vectors for Word Representation},
+  year = {2014},
+  pages = {1532--1543},
+  url = {http://www.aclweb.org/anthology/D14-1162},
+}
+
+@misc{joseph2019programmable,
+    title={A Programmable Approach to Model Compression},
+    author={Vinu Joseph and Saurav Muralidharan and Animesh Garg and Michael Garland and Ganesh Gopalakrishnan},
+    year={2019},
+    eprint={1911.02497},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
+}
+
+@inproceedings{Yang-ccs19,
+    author = {Yang, Ziqi and Zhang, Jiyi and Chang, Ee-Chien and Liang, Zhenkai},
+    title = {Neural Network Inversion in Adversarial Setting via Background Knowledge Alignment},
+    year = {2019},
+    booktitle = {Proceedings of the 2019 ACM SIGSAC Conference on Computer and Communications Security},
+    series = {CCS ’19}
+}
+
+@inproceedings{Kenneth-ccs19,
+    author = {Co, Kenneth T. and Mu\~{n}oz-Gonz\'{a}lez, Luis and de Maupeou, Sixte and Lupu, Emil C.},
+    title = {Procedural Noise Adversarial Examples for Black-Box Attacks on Deep Convolutional Networks},
+    year = {2019},
+    booktitle = {Proceedings of the 2019 ACM SIGSAC Conference on Computer and Communications Security},
+    series = {CCS ’19}
+}
+
+@inproceedings{Zhao-ccs19,
+    author = {Zhao, Yue and Zhu, Hong and Liang, Ruigang and Shen, Qintao and Zhang, Shengzhi and Chen, Kai},
+    title = {Seeing Isn’t Believing: Towards More Robust Adversarial Attack Against Real World Object Detectors},
+    year = {2019},
+    booktitle = {Proceedings of the 2019 ACM SIGSAC Conference on Computer and Communications Security},
+    series = {CCS ’19}
+}
+
+@inproceedings{Tramer-ccs19,
+    author = {Tram\`{e}r, Florian and Dupr\'{e}, Pascal and Rusak, Gili and Pellegrino, Giancarlo and Boneh, Dan},
+    title = {AdVersarial: Perceptual Ad Blocking Meets Adversarial Machine Learning},
+    year = {2019},
+    booktitle = {Proceedings of the 2019 ACM SIGSAC Conference on Computer and Communications Security},
+    series = {CCS ’19}
+}
+
+@misc{zhang2019theoretically,
+    title={Theoretically Principled Trade-off between Robustness and Accuracy},
+    author={Hongyang Zhang and Yaodong Yu and Jiantao Jiao and Eric P. Xing and Laurent El Ghaoui and Michael I. Jordan},
+    year={2019},
+    eprint={1901.08573},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
+}
+
+@inproceedings{Demontis-sec19,
+    author = {Demontis, Ambra and Melis, Marco and Pintor, Maura and Jagielski, Matthew and Biggio, Battista and Oprea, Alina and Nita-Rotaru, Cristina and Roli, Fabio},
+    title = {Why Do Adversarial Attacks Transfer? Explaining Transferability of Evasion and Poisoning Attacks},
+    year = {2019},
+    booktitle = {Proceedings of the 28th USENIX Conference on Security Symposium},
+    series = {SEC’19}
+}
+
+@INPROCEEDINGS{Lecuyer-oakland19,
+    author={M. {Lecuyer} and V. {Atlidakis} and R. {Geambasu} and D. {Hsu} and S. {Jana}},
+    booktitle={2019 IEEE Symposium on Security and Privacy (SP)},
+    title={Certified Robustness to Adversarial Examples with Differential Privacy},
+    year={2019},
+    month={May}
+}
+
+@misc{chen2019angular,
+    title={Angular Visual Hardness},
+    author={Beidi Chen and Weiyang Liu and Animesh Garg and Zhiding Yu and Anshumali Shrivastava and Jan Kautz and Anima Anandkumar},
+    year={2019},
+    eprint={1912.02279},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
+}
+
+@inproceedings{LiS-ndss19,
+    author = {Shasha Li and Ajaya Neupane and Sujoy Paul and Chengyu Song and Srikanth V. Krishnamurthy and Amit K. Roy Chowdhury and Ananthram Swami},
+    title = {Stealthy Adversarial Perturbations Against Real-Time Video Classification Systems},
+    year = {2019},
+    booktitle = {The 2019 Network and Distributed System Security Symposium},
+    series = {NDSS'19}
+}
+
+@inproceedings{Ma-ndss19,
+    author = {Shiqing Ma and Yingqi Liu and Guanhong Tao and Wen-Chuan Lee and Xiangyu Zhang},
+    title = {NIC: Detecting Adversarial Samples with Neural Network Invariant Checking},
+    year = {2019},
+    booktitle = {The 2019 Network and Distributed System Security Symposium},
+    series = {NDSS'19}
+}
+
+@inproceedings{LiJ-ndss19,
+    author = {Jinfeng Li and Shouling Ji and Tianyu Du and Bo Li and Ting Wang},
+    title = {TextBugger: Generating Adversarial Text Against Real-world Applications},
+    year = {2019},
+    booktitle = {The 2019 Network and Distributed System Security Symposium},
+    series = {NDSS'19}
+}
+
+@inproceedings{Yu-ndss20,
+    author = {Honggang Yu and Kaichen Yang and Teng Zhang and Yun-Yun Tsai and Tsung-Yi Ho and Yier Jin},
+    title = {CloudLeak: Large-Scale Deep Learning Models Stealing Through Adversarial Examples},
+    year = {2020},
+    booktitle = {The 2020 Network and Distributed System Security Symposium},
+    series = {NDSS'20}
+}
+
+@inproceedings{Giraldo-ndss20,
+    author = {Jairo Giraldo and Alvaro Cardenas and Murat Kantarcioglu and Jonathan Katz},
+    title = {Adversarial Classification Under Differential Privacy},
+    year = {2020},
+    booktitle = {The 2020 Network and Distributed System Security Symposium},
+    series = {NDSS'20}
+}
+
+@inproceedings{Xu-ndss18,
+    author = {Weilin Xu and David Evans and Yanjun Qi},
+    title = {Feature Squeezing: Detecting Adversarial Examples in Deep Neural Networks},
+    year = {2018},
+    booktitle = {The 2018 Network and Distributed System Security Symposium},
+    series = {NDSS'18}
+}
+
+@inproceedings{Meng-ccs17,
+    author = {Meng, Dongyu and Chen, Hao},
+    title = {MagNet: A Two-Pronged Defense against Adversarial Examples},
+    year = {2017},
+    booktitle = {Proceedings of the 2017 ACM SIGSAC Conference on Computer and Communications Security},
+    series = {CCS ’17}
+}
+
+@INPROCEEDINGS{Papernot-oakland16,
+    author={N. {Papernot} and P. {McDaniel} and X. {Wu} and S. {Jha} and A. {Swami}},
+    booktitle={2016 IEEE Symposium on Security and Privacy (SP)},
+    title={Distillation as a Defense to Adversarial Perturbations Against Deep Neural Networks},
+    year={2016},
+    month={May}
+}
+
+@inproceedings{Patra-ndss20,
+    author = {Arpita Patra and Ajith Suresh},
+    title = {BLAZE: Blazing Fast Privacy-Preserving Machine Learning},
+    year = {2020},
+    booktitle = {The 2020 Network and Distributed System Security Symposium},
+    series = {NDSS'20}
+}
+
+@inproceedings{Chaudhari-ndss20,
+    author = {Harsh Chaudhari and Rahul Rachuri and Ajith Suresh},
+    title = {Trident: Efficient 4PC Framework for Privacy Preserving Machine Learning},
+    year = {2020},
+    booktitle = {The 2020 Network and Distributed System Security Symposium},
+    series = {NDSS'20}
+}
+
+@inproceedings{Song-ccs19,
+    author = {Song, Liwei and Shokri, Reza and Mittal, Prateek},
+    title = {Privacy Risks of Securing Machine Learning Models against Adversarial Examples},
+    year = {2019},
+    booktitle = {Proceedings of the 2019 ACM SIGSAC Conference on Computer and Communications Security},
+    series = {CCS ’19}
+}
+
+@inproceedings{Jia-ccs19,
+    author = {Jia, Jinyuan and Salem, Ahmed and Backes, Michael and Zhang, Yang and Gong, Neil Zhenqiang},
+    title = {MemGuard: Defending against Black-Box Membership Inference Attacks via Adversarial Examples},
+    year = {2019},
+    booktitle = {Proceedings of the 2019 ACM SIGSAC Conference on Computer and Communications Security},
+    series = {CCS ’19}
+}
+
+
+@inproceedings{Jayaraman-sec19,
+    author = {Jayaraman, Bargav and Evans, David},
+    title = {Evaluating Differentially Private Machine Learning in Practice},
+    year = {2019},
+    booktitle = {Proceedings of the 28th USENIX Conference on Security Symposium},
+    series = {SEC’19}
+}
+
+@INPROCEEDINGS{Nasr-oakland19,
+    author={M. {Nasr} and R. {Shokri} and A. {Houmansadr}},
+    booktitle={2019 IEEE Symposium on Security and Privacy (SP)},
+    title={Comprehensive Privacy Analysis of Deep Learning: Passive and Active White-box Inference Attacks against Centralized and Federated Learning},
+    year={2019},
+    month={May}
+}
+
+@inproceedings{Salem-ndss19,
+    author = {Ahmed Salem and Yang Zhang and Mathias Humbert and Pascal Berrang and Mario Fritz and Michael Backes},
+    title = {ML-Leaks: Model and Data Independent Membership Inference Attacks and Defenses on Machine Learning Models},
+    year = {2019},
+    booktitle = {The 2019 Network and Distributed System Security Symposium},
+    series = {NDSS'19}
+}
+
+@inproceedings{Nasr-ccs18,
+    author = {Nasr, Milad and Shokri, Reza and Houmansadr, Amir},
+    title = {Machine Learning with Membership Privacy Using Adversarial Regularization},
+    year = {2018},
+    booktitle = {Proceedings of the 2018 ACM SIGSAC Conference on Computer and Communications Security},
+    series = {CCS ’18}
+}
+
+@inproceedings{Ganju-ccs18,
+    author = {Ganju, Karan and Wang, Qi and Yang, Wei and Gunter, Carl A. and Borisov, Nikita},
+    title = {Property Inference Attacks on Fully Connected Neural Networks Using Permutation Invariant Representations},
+    year = {2018},
+    booktitle = {Proceedings of the 2018 ACM SIGSAC Conference on Computer and Communications Security},
+    series = {CCS ’18}
+}
+
+@inproceedings{Jia-sec18,
+    author = {Jia, Jinyuan and Gong, Neil Zhenqiang},
+    title = {Attriguard: A Practical Defense against Attribute Inference Attacks via Adversarial Machine Learning},
+    year = {2018},
+    booktitle = {Proceedings of the 27th USENIX Conference on Security Symposium},
+    series = {SEC’18}
+}
+
+@inproceedings{Juvekar-sec18,
+    author = {Juvekar, Chiraag and Vaikuntanathan, Vinod and Chandrakasan, Anantha},
+    title = {GAZELLE: A Low Latency Framework for Secure Neural Network Inference},
+    year = {2018},
+    booktitle = {Proceedings of the 27th USENIX Conference on Security Symposium},
+    series = {SEC’18}
+}
+
+@inproceedings{Hitaj-ccs17,
+    author = {Hitaj, Briland and Ateniese, Giuseppe and Perez-Cruz, Fernando},
+    title = {Deep Models Under the GAN: Information Leakage from Collaborative Deep Learning},
+    year = {2017},
+    booktitle = {Proceedings of the 2017 ACM SIGSAC Conference on Computer and Communications Security},
+    series = {CCS ’17}
+}
+
+@inproceedings{Bonawitz-ccs17,
+    author = {Bonawitz, Keith and Ivanov, Vladimir and Kreuter, Ben and Marcedone, Antonio and McMahan, H. Brendan and Patel, Sarvar and Ramage, Daniel and Segal, Aaron and Seth, Karn},
+    title = {Practical Secure Aggregation for Privacy-Preserving Machine Learning},
+    year = {2017},
+    booktitle = {Proceedings of the 2017 ACM SIGSAC Conference on Computer and Communications Security},
+    series = {CCS ’17}
+}
+
+@INPROCEEDINGS{Mohassel-oakland17,
+    author={P. {Mohassel} and Y. {Zhang}},
+    booktitle={2017 IEEE Symposium on Security and Privacy (SP)},
+    title={SecureML: A System for Scalable Privacy-Preserving Machine Learning},
+    year={2017},
+    month={May}
+}
+
+@INPROCEEDINGS{Carlini-oakland17,
+    author={N. {Carlini} and D. {Wagner}},
+    booktitle={2017 IEEE Symposium on Security and Privacy (SP)},
+    title={Towards Evaluating the Robustness of Neural Networks},
+    year={2017},
+    month={May}
+}
+
+@INPROCEEDINGS{Shokri-oakland17,
+    author={R. {Shokri} and M. {Stronati} and C. {Song} and V. {Shmatikov}},
+    booktitle={2017 IEEE Symposium on Security and Privacy (SP)},
+    title={Membership Inference Attacks Against Machine Learning Models},
+    year={2017},
+    month={May}
+}
+
+@inproceedings{Abadi-ccs16,
+    author = {Abadi, Martin and Chu, Andy and Goodfellow, Ian and McMahan, H. Brendan and Mironov, Ilya and Talwar, Kunal and Zhang, Li},
+    title = {Deep Learning with Differential Privacy},
+    year = {2016},
+    booktitle = {Proceedings of the 2016 ACM SIGSAC Conference on Computer and Communications Security},
+    series = {CCS ’16}
+}
+
+@inproceedings{Shokri-ccs15,
+    author = {Shokri, Reza and Shmatikov, Vitaly},
+    title = {Privacy-Preserving Deep Learning},
+    year = {2015},
+    booktitle = {Proceedings of the 22nd ACM SIGSAC Conference on Computer and Communications Security},
+    series = {CCS ’15}
+}
+
+@inproceedings{Han-iclr16,
+    author = {Song Han and Huizi Mao and William J. Dally},
+    title = {Deep Compression: Compressing Deep Neural Network with Pruning, Trained Quantization and Huffman Coding},
+    year = {2016},
+    booktitle = {Proceedings of ICLR 2016},
+    series = {ICLR'16}
+}
+
+@inproceedings{Das-kdd18,
+    author = {Das, Nilaksh and Shanbhogue, Madhuri and Chen, Shang-Tse and Hohman, Fred and Li, Siwei and Chen, Li and Kounavis, Michael E. and Chau, Duen Horng},
+    title = {SHIELD: Fast, Practical Defense and Vaccination for Deep Learning Using JPEG Compression},
+    year = {2018},
+    booktitle = {Proceedings of the 24th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
+    series = {KDD ’18}
+}
+
+@inproceedings{deepfool-cvpr16,
+    author = {Seyed-Mohsen Moosavi-Dezfooli and Alhussein Fawzi and Pascal Frossard},
+    title = {DeepFool: A Simple and Accurate Method to Fool Deep Neural Networks},
+    year = {2016},
+    booktitle = {Proceedings of CVPR},
+    series = {CVPR ’16}
+}
+
+@inproceedings{Das-kdd18-2,
+    author = {Nilaksh Das and Madhuri Shanbhogue and Shang-Tse Chen and Fred Hohman and Siwei Li and Li Chen and Michael E Kounavis and Duen Horng Chau},
+    title = {Compression to the Rescue: Defending from Adversarial Attacks Across Modalities},
+    year = {2018},
+    booktitle = {Proceedings of the 24th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
+    series = {KDD ’18}
+}
+
+@InProceedings{Uittenbogaard-cvpr19,
+    author = {Uittenbogaard, Ries and Sebastian, Clint and Vijverberg, Julien and Boom, Bas and Gavrila, Dariu M. and With, Peter H.N. de},
+    title = {Privacy Protection in Street-View Panoramas Using Depth and Multi-View Imagery},
+    booktitle = {The IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+    month = {June},
+    year = {2019}
+}
+
+@inproceedings{Christodorescu-oakland05,
+    author = {Christodorescu, Mihai and Jha, Somesh and Seshia, Sanjit A. and Song, Dawn and Bryant, Randal E.},
+    title = {Semantics-Aware Malware Detection},
+    year = {2005},
+    booktitle = {Proceedings of the 2005 IEEE Symposium on Security and Privacy},
+    series = {SP ’05}
+}
+
+@misc{mobilenets-Howard17,
+  author = {Howard, Andrew G. and Zhu, Menglong and Chen, Bo and Kalenichenko, Dmitry and Wang, Weijun and Weyand, Tobias and Andreetto, Marco and Adam, Hartwig},
+  title = {MobileNets: Efficient Convolutional Neural Networks for Mobile Vision
+  Applications},
+  url = {http://arxiv.org/abs/1704.04861},
+  year = 2017
+}
+
+@article{SqueezeNet-Iandola17,
+  title={SqueezeNet: AlexNet-level accuracy with 50x fewer parameters and <1MB model size},
+  author={Forrest N. Iandola and Matthew W. Moskewicz and Khalid Ashraf and Song Han and William J. Dally and Kurt Keutzer},
+  journal={ArXiv},
+  year={2017},
+  volume={abs/1602.07360}
+}
+
+@incollection{Han-NIPS15,
+    title = {Learning both Weights and Connections for Efficient Neural Network},
+    author = {Han, Song and Pool, Jeff and Tran, John and Dally, William},
+    booktitle = {Advances in Neural Information Processing Systems 28},
+    editor = {C. Cortes and N. D. Lawrence and D. D. Lee and M. Sugiyama and R. Garnett},
+    pages = {1135--1143},
+    year = {2015},
+    publisher = {Curran Associates, Inc.},
+    url = {http://papers.nips.cc/paper/5784-learning-both-weights-and-connections-for-efficient-neural-network.pdf}
+}
+
+@InProceedings{XNOR-Net-Rastegari16,
+    author="Rastegari, Mohammad and Ordonez, Vicente and Redmon, Joseph and Farhadi, Ali",
+    title="XNOR-Net: ImageNet Classification Using Binary Convolutional Neural Networks",
+    booktitle="Computer Vision -- ECCV 2016",
+    year="2016"
+}
+
+@inproceedings{Han-ISCA16,
+    author = {Han, Song and Liu, Xingyu and Mao, Huizi and Pu, Jing and Pedram, Ardavan and Horowitz, Mark A. and Dally, William J.},
+    title = {EIE: Efficient Inference Engine on Compressed Deep Neural Network},
+    year = {2016},
+    booktitle = {Proceedings of the 43rd International Symposium on Computer Architecture},
+    series = {ISCA ’16}
+}
+
+@InProceedings{Zhang-CVPR18,
+    author = {Zhang, Xiangyu and Zhou, Xinyu and Lin, Mengxiao and Sun, Jian},
+    title = {ShuffleNet: An Extremely Efficient Convolutional Neural Network for Mobile Devices},
+    booktitle = {The IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+    month = {June},
+    year = {2018}
+}
+
+@misc{pytorch-pruning,
+    key = {pytorch},
+    howpublished = {\url{https://pytorch.org/tutorials/intermediate/pruning_tutorial.html}},
+    year = 2020
+}
+
+@misc{tensorflow-lite,
+    key = {TensorFlow-Lite},
+    howpublished = {\url{https://www.tensorflow.org/lite}},
+    year = 2020
+}
+
+@InProceedings{Altschuler2016Greedy,
+  author        = {Altschuler, J. and Bhaskara, A. and Fu, G. and Mirrokni, V. S. and Rostamizadeh, A. and Zadimoghaddam, M.},
+  title         = {Greedy Column Subset Selection: New Bounds and Distributed Algorithms},
+  booktitle     = {ICML},
+  year          = {2016},
+  __markedentry = {[abhas:1]},
+}
+
+@InProceedings{Bateni2014Distributed,
+  author        = {MohammadHossein Bateni and Aditya Bhaskara and Silvio Lattanzi and Vahab Mirrokni},
+  title         = {Distributed Balanced Clustering via Mapping Coresets},
+  booktitle     = {Neural Information Processing Systems, NIPS 2014, Montreal, Canada},
+  year          = {2014},
+  __markedentry = {[abhas:1]},
+}
+
+@InProceedings{Bhaskara2018Distributed,
+  title = 	 {Distributed Clustering via {LSH} Based Data Partitioning},
+  author = 	 {Bhaskara, Aditya and Wijewardena, Maheshakya},
+  booktitle = 	 {Proceedings of the 35th International Conference on Machine Learning, ICML 2018},
+  year = 	 {2018},
+}
+
+@InProceedings{Arora2014Provable,
+  author        = {Sanjeev Arora and Aditya Bhaskara and Rong Ge and Tengyu Ma},
+  title         = {Provable Bounds for Learning Some Deep Representations},
+  booktitle     = {Proceedings of the 31th International Conference on Machine Learning, {ICML} 2014, Beijing, China, 21-26 June 2014},
+  year          = {2014},
+  pages         = {584--592},
+  __markedentry = {[abhas:1]},
+  bibsource     = {dblp computer science bibliography, http://dblp.org},
+  biburl        = {http://dblp.uni-trier.de/rec/bib/conf/icml/AroraBGM14},
+  timestamp     = {Sat, 08 Nov 2014 17:15:56 +0100},
+  url           = {http://jmlr.org/proceedings/papers/v32/arora14.html},
+}
+
+@InProceedings{Bhaskara2019Smoothed,
+  author    = {Aditya Bhaskara and
+               Aidao Chen and
+               Aidan Perreault and
+               Aravindan Vijayaraghavan},
+  title     = {Smoothed Analysis in Unsupervised Learning via Decoupling},
+  booktitle = {60th Annual Symposium on Foundations of Computer Science, {FOCS} 2019},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1811.12361},
+}
+
+@InProceedings{Bhaskara2019Residual,
+  author    = {Aditya Bhaskara and
+               Silvio Lattanzi and
+               Sergei Vassilvitskii and
+               Morteza Zadimoghaddam},
+  title     = {Residual Based Sampling for Online Low Rank Approximation},
+  booktitle = {60th Annual Symposium on Foundations of Computer Science, {FOCS} 2019},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1811.12361},
+}
+
+@InProceedings{Bhaskara2014Smoothed,
+  author        = {Aditya Bhaskara and Moses Charikar and Ankur Moitra and Aravindan Vijayaraghavan},
+  title         = {Smoothed analysis of tensor decompositions},
+  booktitle     = {Symposium on Theory of Computing, {STOC} 2014, New York, NY, USA, May 31 - June 03, 2014},
+  year          = {2014},
+}
+
+@InProceedings{Bhaskara2012Unconditional,
+  author        = {Aditya Bhaskara and Daniel Dadush and Ravishankar Krishnaswamy and Kunal Talwar},
+  title         = {Unconditional differentially private mechanisms for linear queries},
+  booktitle     = {ACM Symposium on Theory of Computing, STOC 2012, New York, NY, USA},
+  year          = {2012},
+  pages         = {1269-1284},
+  __markedentry = {[abhas:1]},
+  bibsource     = {DBLP, http://dblp.uni-trier.de},
+  ee            = {http://doi.acm.org/10.1145/2213977.2214089},
+}
+
+@inproceedings{neyshabur2018the,
+title={The role of over-parametrization in generalization of neural networks},
+author={Behnam Neyshabur and Zhiyuan Li and Srinadh Bhojanapalli and Yann LeCun and Nathan Srebro},
+booktitle={International Conference on Learning Representations},
+year={2019},
+url={https://openreview.net/forum?id=BygfghAcYX},
+}
+
+@article{Babenko2009SimilarityMF,
+  title={Similarity metrics for categorization: From monolithic to category specific},
+  author={Boris Babenko and Steve Branson and Serge J. Belongie},
+  journal={2009 IEEE 12th International Conference on Computer Vision},
+  year={2009},
+  pages={293-300}
+}
+
+@incollection{Bengio2010Label,
+title = {Label Embedding Trees for Large Multi-Class Tasks},
+author = {Bengio, Samy and Weston, Jason and David Grangier},
+booktitle = {Advances in Neural Information Processing Systems 23},
+editor = {J. D. Lafferty and C. K. I. Williams and J. Shawe-Taylor and R. S. Zemel and A. Culotta},
+pages = {163--171},
+year = {2010},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/4027-label-embedding-trees-for-large-multi-class-tasks.pdf}
+}
+
+
+
+@manual{nvgradfellowship,
+      title  = "Graduate Fellowship 2020 for PhD Candidates",
+      author = "NVIDIA Research",
+      url    = "https://www.nvidia.com/en-us/research/graduate-fellowships/",
+      year   = "2020 (accessed June 1, 2020)"
+}
+
+@incollection{Gui-NIPS19,
+    title = {Model Compression with Adversarial Robustness: A Unified Optimization Framework},
+    author = {Gui, Shupeng and Wang, Haotao N and Yang, Haichuan and Yu, Chen and Wang, Zhangyang and Liu, Ji},
+    booktitle = {Advances in Neural Information Processing Systems 32},
+    year = {2019}
+}
